--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DO GIA HUY</title>
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <script src="../js/jquery-3.6.0.min.js"></script>
-    <script src="../js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script>
         $(document).ready(function () {
            var i= 1;
@@ -122,7 +122,7 @@
     <div class="container">
         <div class="row col-md-12">
             <header>
-                <img src="../img/HEADER.PNG" alt="" width="100%">
+                <img src="img/HEADER.PNG" alt="" width="100%">
             </header>
         </div>
 
